--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
-      # ✅ FIXED: removed pnpm version duplication
+      # Use pnpm version from package.json:packageManager (no explicit version here)
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -47,8 +47,10 @@ jobs:
         run: |
           echo "🚀 Deploying MultiVault to network: ${{ github.event.inputs.network }}"
           pnpm hardhat run scripts/deploy.ts --network ${{ github.event.inputs.network }}
+          echo "---- Deployment file ----"
+          cat deployments/${{ github.event.inputs.network }}.json || true
 
-      - name: Verify (optional)
+      - name: Verify implementation (if present)
         if: ${{ github.event.inputs.verify == 'true' }}
         env:
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
@@ -56,11 +58,19 @@ jobs:
           RPC_URL_BASE_SEPOLIA: ${{ secrets.RPC_URL_BASE_SEPOLIA }}
           RPC_URL_SEPOLIA: ${{ secrets.RPC_URL_SEPOLIA }}
         run: |
-          echo "🧾 Verification step enabled."
-          echo "Run manually after deployment:"
-          echo "pnpm hardhat verify --network ${{ github.event.inputs.network }} <PROXY_ADDRESS>"
+          if [ -f deployments/${{ github.event.inputs.network }}.json ]; then
+            IMPL=$(jq -r '.implementation // empty' deployments/${{ github.event.inputs.network }}.json)
+            if [ -n "$IMPL" ]; then
+              echo "🧾 Verifying implementation: $IMPL"
+              pnpm hardhat verify --network ${{ github.event.inputs.network }} $IMPL
+            else
+              echo "ℹ️ Implementation not resolved yet. You can rerun verification later."
+            fi
+          else
+            echo "⚠️ deployments file not found."
+          fi
 
       - name: Job summary
         run: |
-          echo "✅ Deployment job finished."
-          echo "Check logs above for proxy and implementation addresses."
+          echo "✅ Deployment finished. Addresses (if resolved) are in deployments/${{ github.event.inputs.network }}.json"
+          echo "To mark the proxy on explorer, use the 'Verify Proxy' UI with the implementation address."
