--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 20
 
-      # ✅ ВАЖНО: тут НЕТ ключа `version`
+      # no explicit 'version' to avoid ERR_PNPM_BAD_PM_VERSION
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -69,6 +69,15 @@ jobs:
           else
             echo "⚠️ deployments file not found."
           fi
+
+      - name: Commit deployments to repo
+        if: always()
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add deployments/*.json || true
+          git commit -m "chore(deployments): update deployment records [skip ci]" || echo "No changes"
+          git push || echo "No push"
 
       - name: Job summary
         run: |
