--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "multivault",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
+  "license": "MIT",
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
     "build": "hardhat compile",
     "test": "hardhat test",
@@ -15,10 +17,18 @@
     "verify:file": "ts-node scripts/verify.ts"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@openzeppelin/hardhat-upgrades": "^2.3.3",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "^5.0.2",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.1"
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
+    "@openzeppelin/hardhat-upgrades": "^3.2.0",
+    "dotenv": "^16.4.5",
+    "hardhat": "^2.22.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
+    "prettier": "^3.3.3",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solhint": "^3.6.2",
+    "hardhat-gas-reporter": "^2.2.0",
+    "solidity-coverage": "^0.8.7"
   }
 }
