fix(ci): use npm ci with --legacy-peer-deps to resolve hardhat gas-reporter peer conflict

--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci --no-audit --no-fund --legacy-peer-deps
 
       - name: Configure RPC URL
         id: rpc
