--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -28,7 +28,12 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm ci --no-audit --no-fund --legacy-peer-deps
+        run: |
+          if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ] || [ -f yarn.lock ]; then
+            npm ci --no-audit --no-fund --legacy-peer-deps
+          else
+            npm install --no-audit --no-fund --legacy-peer-deps
+          fi
 
       - name: Configure RPC URL
         id: rpc
@@ -48,11 +53,11 @@ jobs:
         run: npx hardhat run scripts/upgrade.ts --network ${{ inputs.network }}
 
       - name: Verify implementation on explorer
-        if: ${{ env.ETHERSCAN_API_KEY != '' }}
+        if: ${{ secrets.ETHERSCAN_API_KEY != '' }}
         env:
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
         run: |
-          echo "Skipping explicit verify step: contract factory verification handled by existing config if enabled."
+          echo "Verification step placeholder"
 
       - name: Upload deployments manifest
         uses: actions/upload-artifact@v4
