fix(ci): rewrite GitHub SSH deps to HTTPS before npm install

--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -27,6 +27,12 @@ jobs:
         with:
           node-version: 20
 
+      - name: Force GitHub git+ssh to HTTPS
+        run: |
+          git config --global url."https://github.com/".insteadOf ssh://git@github.com/
+          git config --global url."https://github.com/".insteadOf git@github.com:
+          git config --global url."https://".insteadOf git://
+
       - name: Install dependencies
         run: |
           if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ] || [ -f yarn.lock ]; then
