--- a/package.json
+++ b/package.json
@@ -3,42 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "packageManager": "pnpm@9.0.0",
   "scripts": {
     "build": "hardhat compile",
     "test": "hardhat test",
-    "coverage": "hardhat coverage",
-    "gas": "REPORT_GAS=true hardhat test",
-    "lint:sol": "solhint 'contracts/**/*.sol'",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "deploy:base": "hardhat run scripts/deploy.ts --network base",
-    "deploy:baseSepolia": "hardhat run scripts/deploy.ts --network baseSepolia",
-    "verify:file": "ts-node scripts/verify.ts"
+    "deploy": "hardhat run scripts/deploy.ts",
+    "upgrade": "hardhat run scripts/upgrade.ts",
+    "lint": "echo \"no lint yet\""
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2",
-    "@openzeppelin/contracts-upgradeable": "^5.0.2",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.10",
-    "wagmi": "^2.14.3",
-    "viem": "^2.9.2",
-
-    "base-account-sdk": "github:base/account-sdk",
-    "base-pay-sdk": "github:base/pay-sdk",
-    "base-onchainkit": "github:base/onchainkit",
-    "onchainkit-react": "github:coinbase/onchainkit-react",
-    "cbpay-js": "github:coinbase/cbpay-js"
+    "@coinbase/onchainkit": "^0.20.0",
+    "ethers": "^6.11.1"
   },
   "devDependencies": {
-    "@openzeppelin/hardhat-upgrades": "^3.2.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/hardhat-upgrades": "^1.29.0",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.0.0",
     "dotenv": "^16.4.5",
+    "hardhat": "^2.22.5",
+    "hardhat-gas-reporter": "^1.0.9",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "prettier": "^3.3.3",
-    "prettier-plugin-solidity": "^1.3.1",
-    "solhint": "^3.6.2",
-    "hardhat-gas-reporter": "^2.2.0",
-    "solidity-coverage": "^0.8.16"
+    "typescript": "^5.4.0"
   }
 }
