fix(ci): simplify install and drop SSH/legacy hacks after dependency cleanup

--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -27,19 +27,12 @@ jobs:
         with:
           node-version: 20
 
-      - name: Force GitHub SSH deps to HTTPS
-        run: |
-          git config --global url."https://github.com/".insteadOf git@github.com:
-          git config --global url."https://github.com/".insteadOf ssh://git@github.com/
-          git config --global url."https://github.com/".insteadOf git+ssh://git@github.com/
-          git config --global url."https://".insteadOf git://
-
       - name: Install dependencies
         run: |
           if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ] || [ -f yarn.lock ]; then
-            npm ci --no-audit --no-fund --legacy-peer-deps
+            npm ci --no-audit --no-fund
           else
-            npm install --no-audit --no-fund --legacy-peer-deps
+            npm install --no-audit --no-fund
           fi
 
       - name: Configure RPC URL
