fix(deps): pin @openzeppelin/hardhat-upgrades to ^1.28.0 (valid npm version)

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.20.0",
+    "@openzeppelin/contracts": "^5.0.2",
     "ethers": "^6.11.1"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@openzeppelin/hardhat-upgrades": "^1.29.0",
+    "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.0.0",
     "dotenv": "^16.4.5",
