--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -55,12 +55,4 @@ jobs:
       - name: Verify implementation on explorer
         env:
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
-        if: ${{ env.ETHERSCAN_API_KEY != '' }}
-        run: |
-          echo "Verification step placeholder"
-
-      - name: Upload deployments manifest
-        uses: actions/upload-artifact@v4
-        with:
-          name: deployments-${{ inputs.network }}
-          path: deployments
+        if: ${{ env.ETHERSC
